--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -1,159 +1,160 @@
+$lh: 16px;
 $base-base-fonts-16: (
     'aleo': (
-      12px:('d':p2b(4px)),
-      14px:('d':p2b(11px)),
-      16px:('d':p2b(10px)),
-      18px:('d':p2b(10px)), 
-      20px:('d':p2b(9px)),
-      22px:('d':p2b(8px)),
-      24px:('d':p2b(8px)),
-      26px:('d':p2b(7px)),
-      28px:('d':p2b(6px)),
-      30px:('d':p2b(13px)),
-      32px:('d':p2b(13px)),
-      34px:('d':p2b(12px)),
-      36px:('d':p2b(11px)),
-      38px:('d':p2b(11px)),
-      40px:('d':p2b(10px)),
-      42px:('d':p2b(9px)),
-      44px:('d':p2b(9px)),
-      64px:('d':p2b(1px))
+      12px:('d':p2b(4px,$lh)),
+      14px:('d':p2b(11px,$lh)),
+      16px:('d':p2b(10px,$lh)),
+      18px:('d':p2b(10px,$lh)), 
+      20px:('d':p2b(9px,$lh)),
+      22px:('d':p2b(8px,$lh)),
+      24px:('d':p2b(8px,$lh)),
+      26px:('d':p2b(7px,$lh)),
+      28px:('d':p2b(6px,$lh)),
+      30px:('d':p2b(13px,$lh)),
+      32px:('d':p2b(13px,$lh)),
+      34px:('d':p2b(12px,$lh)),
+      36px:('d':p2b(11px,$lh)),
+      38px:('d':p2b(11px,$lh)),
+      40px:('d':p2b(10px,$lh)),
+      42px:('d':p2b(9px,$lh)),
+      44px:('d':p2b(9px,$lh)),
+      64px:('d':p2b(1px,$lh))
       ),
   'source-sans-pro': (
-    12px:('d':p2b(4px)),
-    14px:('d':p2b(11px), 1: p2b(3px)),
-    16px:('d':p2b(10px), 1: p2b(2px)),
-    17px:('d':p2b(10px)), 
-    18px:('d':p2b(10px), 1: p2b(2px)),
-    20px:('d':p2b(10px)),
-    21px:('d':p2b(9px)),
-    22px:('d':p2b(8px)),
-    24px:('d':p2b(8px)),
-    26px:('d':p2b(7px)),
-    28px:('d':p2b(6px)),
-    30px:('d':p2b(14px)),
-    32px:('d':p2b(13px)),
-    34px:('d':p2b(13px)),
-    36px:('d':p2b(12px)),
-    38px:('d':p2b(11px)),
-    40px:('d':p2b(10px)),
-    42px:('d':p2b(10px)),
-    60px:('d':p2b(10px))
+    12px:('d':p2b(4px,$lh)),
+    14px:('d':p2b(11px,$lh), 1: p2b(3px,$lh)),
+    16px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
+    17px:('d':p2b(10px,$lh)), 
+    18px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
+    20px:('d':p2b(10px,$lh)),
+    21px:('d':p2b(9px,$lh)),
+    22px:('d':p2b(8px,$lh)),
+    24px:('d':p2b(8px,$lh)),
+    26px:('d':p2b(7px,$lh)),
+    28px:('d':p2b(6px,$lh)),
+    30px:('d':p2b(14px,$lh)),
+    32px:('d':p2b(13px,$lh)),
+    34px:('d':p2b(13px,$lh)),
+    36px:('d':p2b(12px,$lh)),
+    38px:('d':p2b(11px,$lh)),
+    40px:('d':p2b(10px,$lh)),
+    42px:('d':p2b(10px,$lh)),
+    60px:('d':p2b(10px,$lh))
     ),
   'oswald': (
-    11px:('d':p2b(3px)),
-    12px:('d':p2b(2px)),
-    14px:('d':p2b(9px)),
-    16px:('d':p2b(8px)),
-    18px:('d':p2b(8px)), 
-    20px:('d':p2b(6px)),
-    22px:('d':p2b(5px)),
-    24px:('d':p2b(4px)),
-    26px:('d':p2b(4px)),
-    28px:('d':p2b(3px)),
-    30px:('d':p2b(10px)),
-    32px:('d':p2b(9px)),
-    34px:('d':p2b(8px)),
-    36px:('d':p2b(7px)),
-    38px:('d':p2b(6px)),
-    40px:('d':p2b(5px)),
-    42px:('d':p2b(4px))
+    11px:('d':p2b(3px,$lh)),
+    12px:('d':p2b(2px,$lh)),
+    14px:('d':p2b(9px,$lh)),
+    16px:('d':p2b(8px,$lh)),
+    18px:('d':p2b(8px,$lh)), 
+    20px:('d':p2b(6px,$lh)),
+    22px:('d':p2b(5px,$lh)),
+    24px:('d':p2b(4px,$lh)),
+    26px:('d':p2b(4px,$lh)),
+    28px:('d':p2b(3px,$lh)),
+    30px:('d':p2b(10px,$lh)),
+    32px:('d':p2b(9px,$lh)),
+    34px:('d':p2b(8px,$lh)),
+    36px:('d':p2b(7px,$lh)),
+    38px:('d':p2b(6px,$lh)),
+    40px:('d':p2b(5px,$lh)),
+    42px:('d':p2b(4px,$lh))
     ),
   'open-sans': (
-    12px:('d':p2b(4px)),
-    14px:('d':p2b(11px), 1:p2b(2px)),
-    16px:('d':p2b(10px)),
-    18px:('d':p2b(9px)), 
-    20px:('d':p2b(9px)),
-    22px:('d':p2b(7px)),
-    24px:('d':p2b(7px)),
-    26px:('d':p2b(6px)),
-    28px:('d':p2b(5px)),
-    30px:('d':p2b(13px)),
-    32px:('d':p2b(12px)),
-    34px:('d':p2b(11px)),
-    36px:('d':p2b(11px)),
-    38px:('d':p2b(9px)),
-    40px:('d':p2b(9px)),
-    42px:('d':p2b(8px))
+    12px:('d':p2b(4px,$lh)),
+    14px:('d':p2b(11px,$lh), 1:p2b(2px,$lh)),
+    16px:('d':p2b(10px,$lh)),
+    18px:('d':p2b(9px,$lh)), 
+    20px:('d':p2b(9px,$lh)),
+    22px:('d':p2b(7px,$lh)),
+    24px:('d':p2b(7px,$lh)),
+    26px:('d':p2b(6px,$lh)),
+    28px:('d':p2b(5px,$lh)),
+    30px:('d':p2b(13px,$lh)),
+    32px:('d':p2b(12px,$lh)),
+    34px:('d':p2b(11px,$lh)),
+    36px:('d':p2b(11px,$lh)),
+    38px:('d':p2b(9px,$lh)),
+    40px:('d':p2b(9px,$lh)),
+    42px:('d':p2b(8px,$lh))
     ),
   'raleway': (
-    11px:('d':p2b(5px)),
-    12px:('d':p2b(4px)),
-    14px:('d':p2b(11px)),
-    16px:('d':p2b(11px)),
-    17px:('d':p2b(10px)), 
-    18px:('d':p2b(10px)), 
-    20px:('d':p2b(9px)),
-    22px:('d':p2b(8px)),
-    24px:('d':p2b(8px)),
-    26px:('d':p2b(7px)),
-    28px:('d':p2b(7px)),
-    30px:('d':p2b(14px)),
-    32px:('d':p2b(13px)),
-    34px:('d':p2b(12px)),
-    36px:('d':p2b(11px)),
-    38px:('d':p2b(11px)),
-    40px:('d':p2b(10px)),
-    42px:('d':p2b(10px))
+    11px:('d':p2b(5px,$lh)),
+    12px:('d':p2b(4px,$lh)),
+    14px:('d':p2b(11px,$lh)),
+    16px:('d':p2b(11px,$lh)),
+    17px:('d':p2b(10px,$lh)), 
+    18px:('d':p2b(10px,$lh)), 
+    20px:('d':p2b(9px,$lh)),
+    22px:('d':p2b(8px,$lh)),
+    24px:('d':p2b(8px,$lh)),
+    26px:('d':p2b(7px,$lh)),
+    28px:('d':p2b(7px,$lh)),
+    30px:('d':p2b(14px,$lh)),
+    32px:('d':p2b(13px,$lh)),
+    34px:('d':p2b(12px,$lh)),
+    36px:('d':p2b(11px,$lh)),
+    38px:('d':p2b(11px,$lh)),
+    40px:('d':p2b(10px,$lh)),
+    42px:('d':p2b(10px,$lh))
     ),
   'roboto': (
-    12px:('d':p2b(4px)),
-    14px:('d':p2b(11px)),
-    16px:('d':p2b(11px)),
-    18px:('d':p2b(10px)), 
-    20px:('d':p2b(9px)),
-    22px:('d':p2b(9px)),
-    24px:('d':p2b(8px)),
-    26px:('d':p2b(7px)),
-    28px:('d':p2b(7px)),
-    30px:('d':p2b(14px)),
-    32px:('d':p2b(13px)),
-    34px:('d':p2b(12px)),
-    36px:('d':p2b(12px)),
-    38px:('d':p2b(11px)),
-    40px:('d':p2b(11px)),
-    42px:('d':p2b(10px))
+    12px:('d':p2b(4px,$lh)),
+    14px:('d':p2b(11px,$lh)),
+    16px:('d':p2b(11px,$lh)),
+    18px:('d':p2b(10px,$lh)), 
+    20px:('d':p2b(9px,$lh)),
+    22px:('d':p2b(9px,$lh)),
+    24px:('d':p2b(8px,$lh)),
+    26px:('d':p2b(7px,$lh)),
+    28px:('d':p2b(7px,$lh)),
+    30px:('d':p2b(14px,$lh)),
+    32px:('d':p2b(13px,$lh)),
+    34px:('d':p2b(12px,$lh)),
+    36px:('d':p2b(12px,$lh)),
+    38px:('d':p2b(11px,$lh)),
+    40px:('d':p2b(11px,$lh)),
+    42px:('d':p2b(10px,$lh))
     ),
   'proxima-nova': (
-    12px:('d':p2b(4px)),
-    13px:('d':p2b(11px)),
-    14px:('d':p2b(12px), 1:p2b(4px)),
-    16px:('d':p2b(11px), 1:p2b(3px)),
-    18px:('d':p2b(10px)), 
-    20px:('d':p2b(10px)),
-    21px:('d':p2b(10px)),
-    22px:('d':p2b(9px)),
-    24px:('d':p2b(9px)),
-    26px:('d':p2b(8px)),
-    28px:('d':p2b(7px)),
-    30px:('d':p2b(15px), 2:p2b(7px)),
-    32px:('d':p2b(14px)),
-    34px:('d':p2b(14px)),
-    36px:('d':p2b(13px)),
-    38px:('d':p2b(12px)),
-    40px:('d':p2b(11px)),
-    42px:('d':p2b(11px)),
-    48px:('d':p2b(1px), 3:p2b(9px)),
-    56px:('d':p2b(14px)),
-    64px:('d':p2b(4px), 4:p2b(11px))
+    12px:('d':p2b(4px,$lh)),
+    13px:('d':p2b(11px,$lh)),
+    14px:('d':p2b(12px,$lh), 1:p2b(4px,$lh)),
+    16px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
+    18px:('d':p2b(10px,$lh)), 
+    20px:('d':p2b(10px,$lh)),
+    21px:('d':p2b(10px,$lh)),
+    22px:('d':p2b(9px,$lh)),
+    24px:('d':p2b(9px,$lh)),
+    26px:('d':p2b(8px,$lh)),
+    28px:('d':p2b(7px,$lh)),
+    30px:('d':p2b(15px,$lh), 2:p2b(7px,$lh)),
+    32px:('d':p2b(14px,$lh)),
+    34px:('d':p2b(14px,$lh)),
+    36px:('d':p2b(13px,$lh)),
+    38px:('d':p2b(12px,$lh)),
+    40px:('d':p2b(11px,$lh)),
+    42px:('d':p2b(11px,$lh)),
+    48px:('d':p2b(1px,$lh), 3:p2b(9px,$lh)),
+    56px:('d':p2b(14px,$lh)),
+    64px:('d':p2b(4px,$lh), 4:p2b(11px,$lh))
     ),
   'proxima-nova-condensed': (
-    12px:('d':p2b(5px)),
-    14px:('d':p2b(12px)),
-    16px:('d':p2b(12px)),
-    18px:('d':p2b(12px)), 
-    20px:('d':p2b(11px)),
-    22px:('d':p2b(11px)),
-    24px:('d':p2b(10px)),
-    26px:('d':p2b(9px)),
-    28px:('d':p2b(9px)),
-    30px:('d':p2b(1px)),
-    32px:('d':p2b(0px)),
-    34px:('d':p2b(15px)),
-    36px:('d':p2b(15px)),
-    38px:('d':p2b(14px)),
-    40px:('d':p2b(14px)),
-    42px:('d':p2b(13px))
+    12px:('d':p2b(5px,$lh)),
+    14px:('d':p2b(12px,$lh)),
+    16px:('d':p2b(12px,$lh)),
+    18px:('d':p2b(12px,$lh)), 
+    20px:('d':p2b(11px,$lh)),
+    22px:('d':p2b(11px,$lh)),
+    24px:('d':p2b(10px,$lh)),
+    26px:('d':p2b(9px,$lh)),
+    28px:('d':p2b(9px,$lh)),
+    30px:('d':p2b(1px,$lh)),
+    32px:('d':p2b(0px,$lh)),
+    34px:('d':p2b(15px,$lh)),
+    36px:('d':p2b(15px,$lh)),
+    38px:('d':p2b(14px,$lh)),
+    40px:('d':p2b(14px,$lh)),
+    42px:('d':p2b(13px,$lh))
     )
   );
