--- a/_font-settings-12.scss
+++ b/_font-settings-12.scss
@@ -2,7 +2,7 @@ $lh: 12px;
 $base-base-fonts-12: (
     'roboto': (
       10px:('d':p2b(9px,$lh)),
-      12px:('d':p2b(8px,$lh)),
+      12px:('d':p2b(8px,$lh), 1: p2b(2px,$lh)),
       14px:('d':p2b(7px,$lh)),
       16px:('d':p2b(7px,$lh)),
       18px:('d':p2b(6px,$lh)), 
