--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -116,6 +116,26 @@ $base-base-fonts-16: (
     40px:('d':p2b(11px,$lh)),
     42px:('d':p2b(10px,$lh))
     ),
+  'lato': (
+    12px:('d':p2b(4px,$lh)),
+    14px:('d':p2b(11px,$lh)),
+    17px:('d':p2b(10px,$lh)),
+    16px:('d':p2b(10px,$lh)),
+    18px:('d':p2b(9px,$lh)), 
+    20px:('d':p2b(8px,$lh)),
+    22px:('d':p2b(8px,$lh)),
+    24px:('d':p2b(7px,$lh)),
+    26px:('d':p2b(6px,$lh)),
+    28px:('d':p2b(5px,$lh)),
+    30px:('d':p2b(12px,$lh)),
+    32px:('d':p2b(12px,$lh)),
+    34px:('d':p2b(11px,$lh)),
+    36px:('d':p2b(10px,$lh)),
+    38px:('d':p2b(9px,$lh)),
+    40px:('d':p2b(9px,$lh)),
+    42px:('d':p2b(8px,$lh)),
+    45px:('d':p2b(15px,$lh))
+    ),
   'proxima-nova': (
     12px:('d':p2b(4px,$lh)),
     13px:('d':p2b(11px,$lh)),
