--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -20,6 +20,25 @@ $base-base-fonts-16: (
       44px:('d':p2b(9px,$lh)),
       64px:('d':p2b(1px,$lh))
       ),
+    'georgia': (
+      12px:('d':p2b(4px,$lh)),
+      14px:('d':p2b(11px,$lh)),
+      16px:('d':p2b(11px,$lh)),
+      17px:('d':p2b(10px,$lh)), 
+      18px:('d':p2b(10px,$lh)), 
+      20px:('d':p2b(9px,$lh)),
+      22px:('d':p2b(9px,$lh)),
+      24px:('d':p2b(8px,$lh)),
+      26px:('d':p2b(7px,$lh)),
+      28px:('d':p2b(6px,$lh)),
+      30px:('d':p2b(14px,$lh)),
+      32px:('d':p2b(13px,$lh)),
+      34px:('d':p2b(12px,$lh)),
+      36px:('d':p2b(12px,$lh)),
+      38px:('d':p2b(11px,$lh)),
+      40px:('d':p2b(10px,$lh)),
+      42px:('d':p2b(9px,$lh))
+      ),
   'source-sans-pro': (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(11px,$lh), 1: p2b(3px,$lh)),
@@ -119,12 +138,14 @@ $base-base-fonts-16: (
   'lato': (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(11px,$lh)),
-    17px:('d':p2b(10px,$lh)),
+    15px:('d':p2b(11px,$lh)),
     16px:('d':p2b(10px,$lh)),
+    17px:('d':p2b(10px,$lh)),
     18px:('d':p2b(9px,$lh)), 
     20px:('d':p2b(8px,$lh)),
     22px:('d':p2b(8px,$lh)),
     24px:('d':p2b(7px,$lh)),
+    25px:('d':p2b(6px,$lh)),
     26px:('d':p2b(6px,$lh)),
     28px:('d':p2b(5px,$lh)),
     30px:('d':p2b(12px,$lh)),
