--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -139,10 +139,11 @@ $base-base-fonts-16: (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(10px,$lh)),
     15px:('d':p2b(10px,$lh)),
-    16px:('d':p2b(10px,$lh)),
+    16px:('d':p2b(10px,$lh), 1:p2b(2px, $lh)),
     17px:('d':p2b(9px,$lh)),
     18px:('d':p2b(9px,$lh)), 
     20px:('d':p2b(8px,$lh)),
+    21px:('d':p2b(8px,$lh)),
     22px:('d':p2b(7px,$lh)),
     24px:('d':p2b(6px,$lh)),
     25px:('d':p2b(6px,$lh)),
@@ -155,7 +156,8 @@ $base-base-fonts-16: (
     38px:('d':p2b(9px,$lh)),
     40px:('d':p2b(8px,$lh)),
     42px:('d':p2b(7px,$lh)),
-    45px:('d':p2b(14px,$lh))
+    45px:('d':p2b(14px,$lh)),
+    52px:('d':p2b(12px,$lh))
     ),
   'proxima-nova': (
     12px:('d':p2b(4px,$lh)),
