--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -180,7 +180,8 @@ $base-base-fonts-16: (
     42px:('d':p2b(11px,$lh)),
     48px:('d':p2b(1px,$lh), 3:p2b(9px,$lh)),
     56px:('d':p2b(14px,$lh)),
-    64px:('d':p2b(4px,$lh), 4:p2b(11px,$lh))
+    64px:('d':p2b(4px,$lh), 4:p2b(11px,$lh)),
+    90px:('d':p2b(3px,$lh))
     ),
   'proxima-nova-condensed': (
     12px:('d':p2b(5px,$lh)),
