--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -1,5 +1,23 @@
 $lh: 16px;
 $base-base-fonts-16: (
+    'adelle': (
+      12px:('d':p2b(4px,$lh)),
+      14px:('d':p2b(11px,$lh)),
+      16px:('d':p2b(11px,$lh)),
+      18px:('d':p2b(10px,$lh)),
+      20px:('d':p2b(9px,$lh)),
+      22px:('d':p2b(9px,$lh)),
+      24px:('d':p2b(8px,$lh)),
+      26px:('d':p2b(7px,$lh)),
+      28px:('d':p2b(7px,$lh)),
+      30px:('d':p2b(14px,$lh)),
+      32px:('d':p2b(13px,$lh)),
+      34px:('d':p2b(13px,$lh)),
+      36px:('d':p2b(11px,$lh)),
+      38px:('d':p2b(11px,$lh)),
+      40px:('d':p2b(10px,$lh)),
+      42px:('d':p2b(9px,$lh))
+      ),
     'aleo': (
       12px:('d':p2b(4px,$lh)),
       14px:('d':p2b(11px,$lh)),
@@ -173,7 +191,7 @@ $base-base-fonts-16: (
     26px:('d':p2b(8px,$lh)),
     28px:('d':p2b(7px,$lh)),
     30px:('d':p2b(15px,$lh), 2:p2b(7px,$lh)),
-    32px:('d':p2b(14px,$lh)),
+    32px:('d':p2b(14px,$lh), 2:p2b(6px,$lh)),
     34px:('d':p2b(14px,$lh)),
     36px:('d':p2b(13px,$lh)),
     38px:('d':p2b(12px,$lh)),
@@ -181,6 +199,7 @@ $base-base-fonts-16: (
     42px:('d':p2b(11px,$lh)),
     48px:('d':p2b(1px,$lh), 3:p2b(9px,$lh)),
     56px:('d':p2b(14px,$lh)),
+    58px:('d':p2b(14px,$lh)),
     64px:('d':p2b(4px,$lh), 4:p2b(11px,$lh)),
     90px:('d':p2b(3px,$lh))
     ),
