--- a/_font-settings-14.scss
+++ b/_font-settings-14.scss
@@ -1,5 +1,25 @@
 $lh: 14px;
 $base-base-fonts-14: (
+  //Changa One
+  'changa-one':(
+    12px:('d':p2b(10px,$lh)),
+    14px:('d':p2b(9px,$lh)),
+    16px:('d':p2b(8px,$lh)),
+    18px:('d':p2b(7px,$lh)),
+    20px:('d':p2b(6px,$lh)),
+    22px:('d':p2b(6px,$lh)),
+    24px:('d':p2b(5px,$lh)),
+    26px:('d':p2b(11px,$lh)),
+    28px:('d':p2b(10px,$lh)),
+    30px:('d':p2b(10px,$lh)),
+    32px:('d':p2b(10px,$lh)),
+    34px:('d':p2b(8px,$lh)),
+    36px:('d':p2b(7px,$lh)),
+    38px:('d':p2b(7px,$lh)),
+    40px:('d':p2b(13px,$lh)),
+    42px:('d':p2b(13px,$lh)),
+    66px:('d':p2b(10px,$lh))
+    ),
   //thesans
   'thesans':(
     11px:('d':p2b(10px,$lh)),
@@ -29,7 +49,8 @@ $base-base-fonts-14: (
     56px:('d':p2b(1px,$lh)),
     58px:('d':p2b(1px,$lh)),
     60px:('d':p2b(1px,$lh))
-    ),//pt sans
+    ),
+  //pt sans
   'pt-sans':(
     11px:('d':p2b(1px,$lh)),
     12px:('d':p2b(10px,$lh)),
@@ -450,7 +471,7 @@ $base-base-fonts-14: (
     13px:('d':.29),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(8px,$lh)),
-    18px:('d':.47), 
+    18px:('d':.47),
     20px:('d':.47),
     22px:('d':p2b(6px,$lh)),
     24px:('d':p2b(6px,$lh)),
@@ -469,7 +490,7 @@ $base-base-fonts-14: (
     12px:('d':.8),
     14px:('d':.7),
     16px:('d':.7),
-    18px:('d':p2b(9px,$lh)), 
+    18px:('d':p2b(9px,$lh)),
     20px:('d':p2b(9px,$lh)),
     22px:('d':p2b(8px,$lh)),
     24px:('d':p2b(7px,$lh)),
@@ -488,7 +509,7 @@ $base-base-fonts-14: (
     12px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(9px,$lh)),
-    18px:('d':p2b(8px,$lh)), 
+    18px:('d':p2b(8px,$lh)),
     20px:('d':p2b(7px,$lh)),
     22px:('d':p2b(7px,$lh)),
     24px:('d':p2b(6px,$lh)),
@@ -507,7 +528,7 @@ $base-base-fonts-14: (
     12px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(9px,$lh)),
-    18px:('d':p2b(8px,$lh)), 
+    18px:('d':p2b(8px,$lh)),
     20px:('d':p2b(7px,$lh)),
     22px:('d':p2b(7px,$lh)),
     24px:('d':p2b(6px,$lh)),
@@ -526,7 +547,7 @@ $base-base-fonts-14: (
     12px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(8px,$lh)),
-    18px:('d':p2b(8px,$lh)), 
+    18px:('d':p2b(8px,$lh)),
     20px:('d':p2b(7px,$lh)),
     22px:('d':p2b(6px,$lh)),
     24px:('d':p2b(6px,$lh)),
@@ -548,7 +569,7 @@ $base-base-fonts-14: (
     12px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(8px,$lh)),
-    18px:('d':p2b(7px,$lh)), 
+    18px:('d':p2b(7px,$lh)),
     20px:('d':p2b(6px,$lh)),
     22px:('d':p2b(5px,$lh)),
     24px:('d':p2b(5px,$lh)),
@@ -570,7 +591,7 @@ $base-base-fonts-14: (
       12px:('d':p2b(8px,$lh)),
       14px:('d':p2b(10px,$lh)),
       16px:('d':p2b(10px,$lh)),
-      18px:('d':p2b(9px,$lh)), 
+      18px:('d':p2b(9px,$lh)),
       20px:('d':p2b(9px,$lh)),
       22px:('d':p2b(9px,$lh)),
       24px:('d':p2b(8px,$lh)),
@@ -589,8 +610,8 @@ $base-base-fonts-14: (
     12px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(8px,$lh)),
-    17px:('d':p2b(8px,$lh)), 
-    18px:('d':p2b(7px,$lh)), 
+    17px:('d':p2b(8px,$lh)),
+    18px:('d':p2b(7px,$lh)),
     20px:('d':p2b(7px,$lh)),
     22px:('d':p2b(6px,$lh)),
     24px:('d':p2b(5px,$lh)),
@@ -610,7 +631,7 @@ $base-base-fonts-14: (
     14px:('d':p2b(8px,$lh)),
     16px:('d':p2b(7px,$lh)),
     17px:('d':p2b(7px,$lh)),
-    18px:('d':p2b(7px,$lh)), 
+    18px:('d':p2b(7px,$lh)),
     20px:('d':p2b(6px,$lh)),
     22px:('d':p2b(5px,$lh)),
     24px:('d':p2b(4px,$lh)),
@@ -629,7 +650,7 @@ $base-base-fonts-14: (
     13px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(9px,$lh)),
-    18px:('d':p2b(8px,$lh)), 
+    18px:('d':p2b(8px,$lh)),
     19px:('d':p2b(8px,$lh)),
     20px:('d':p2b(7px,$lh)),
     22px:('d':p2b(7px,$lh)),
