--- a/_font-settings-14.scss
+++ b/_font-settings-14.scss
@@ -10,7 +10,7 @@ $base-base-fonts-14: (
     22px:('d':p2b(7px,$lh)),
     24px:('d':p2b(6px,$lh)),
     26px:('d':p2b(12px,$lh)),
-    28px:('d':p2b(11px,$lh)),
+    28px:('d':p2b(11px,$lh), 2:p2b(4px)),
     30px:('d':p2b(11px,$lh)),
     32px:('d':p2b(10px,$lh)),
     34px:('d':p2b(9px,$lh)),
