chunga one variants
Signed-off-by: Jason <jason@dashmedia.com.au>

--- a/_font-settings-14.scss
+++ b/_font-settings-14.scss
@@ -17,7 +17,8 @@ $base-base-fonts-14: (
     36px:('d':p2b(8px,$lh)),
     38px:('d':p2b(8px,$lh)),
     40px:('d':p2b(0px,$lh)),
-    42px:('d':p2b(0px,$lh)),
+    42px:('d':p2b(0px,$lh), 3:p2b(6px)),
+    52px:('d':p2b(10px,$lh)),
     66px:('d':p2b(12px,$lh))
     ),
   //thesans
