add support for 400 level weights
Signed-off-by: Jason <jason@dashmedia.com.au>

--- a/_base-base.scss
+++ b/_base-base.scss
@@ -132,7 +132,7 @@ $base-base-fonts: (
   $weight: null
   ){
   $original-font-family: $font-family;
-  @if $weight == 'normal'{
+  @if $weight == 'normal' or $weight == 400{
     $weight: null;
   }
   @if $weight != null {
