--- a/_font-settings-14.scss
+++ b/_font-settings-14.scss
@@ -322,7 +322,7 @@ $base-base-fonts-14: (
     48px:('d':p2b(13px,$lh))
     ),
   'refrigerator-deluxe':(
-    12px:('d':.7),
+    12px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(9px,$lh)),
     18px:('d':p2b(8px,$lh)),
@@ -341,22 +341,22 @@ $base-base-fonts-14: (
     72px:('d':p2b(3px,$lh))
     ),
   'merriweather':(
-    12px:('d':.7),
+    12px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
-    16px:('d':p2b(9px,$lh)),
-    18px:('d':.6),
-    20px:('d':.6),
-    22px:('d':.53),
+    16px:('d':p2b(8px,$lh)),
+    18px:('d':p2b(8px,$lh)),
+    20px:('d':p2b(7px,$lh)),
+    22px:('d':p2b(6px,$lh)),
     24px:('d':p2b(6px,$lh)),
     26px:('d':p2b(12px,$lh)),
-    28px:('d':p2b(8px,$lh)),
-    30px:('d':p2b(8px,$lh)),
+    28px:('d':p2b(11px,$lh)),
+    30px:('d':p2b(10px,$lh)),
     32px:('d':p2b(10px,$lh)),
-    34px:('d':p2b(10px,$lh)),
+    34px:('d':p2b(9px,$lh)),
     36px:('d':p2b(9px,$lh)),
     38px:('d':p2b(8px,$lh)),
-    40px:('d':0),
-    42px:('d':0)
+    40px:('d':p2b(0px,$lh)),
+    42px:('d':p2b(13px,$lh))
     ),
   'oswald':(
     12px:('d':p2b(9px,$lh)),
@@ -378,7 +378,7 @@ $base-base-fonts-14: (
     62px:('d':.5)
     ),
   'adelle':(
-    12px:('d':.7),
+    12px:('d':p2b(10px,$lh)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(9px,$lh)),
     18px:('d':p2b(8px,$lh)),
@@ -460,7 +460,7 @@ $base-base-fonts-14: (
      42px:('d':p2b(8px,$lh))
      ),
   'arial':(
-    12px:('d':.7),
+    12px:('d':p2b(10px)),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(9px,$lh)),
     18px:('d':p2b(8px,$lh)),
@@ -501,7 +501,7 @@ $base-base-fonts-14: (
     ),
   'ubuntu': (
     11px:('d':.32),
-    12px:('d':.7),
+    12px:('d':p2b(10px)),
     13px:('d':.29),
     14px:('d':p2b(9px,$lh)),
     16px:('d':p2b(8px,$lh)),
@@ -522,8 +522,8 @@ $base-base-fonts-14: (
   'adobe-garamond-pro': (
     11px:('d':.8),
     12px:('d':.8),
-    14px:('d':.7),
-    16px:('d':.7),
+    14px:('d':p2b(10px)),
+    16px:('d':p2b(10px)),
     18px:('d':p2b(9px,$lh)),
     20px:('d':p2b(9px,$lh)),
     22px:('d':p2b(8px,$lh)),
