--- a/_font-settings-14.scss
+++ b/_font-settings-14.scss
@@ -237,8 +237,8 @@ $base-base-fonts-14: (
     18px:('d':p2b(7px,$lh)),
     19px:('d':p2b(7px,$lh)),
     20px:('d':p2b(7px,$lh)),
-    22px:('d':p2b(5px,$lh)),
-    24px:('d':p2b(5px,$lh)),
+    22px:('d':p2b(5px,$lh), 3:p2b(12px, $lh)),
+    24px:('d':p2b(5px,$lh), 3:p2b(12px, $lh)),
     26px:('d':p2b(11px,$lh)),
     28px:('d':p2b(10px,$lh)),
     30px:('d':p2b(10px,$lh)),
