--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -23,7 +23,7 @@ $base-base-fonts-16: (
       12px:('d':p2b(4px,$lh)),
       14px:('d':p2b(11px,$lh)),
       16px:('d':p2b(10px,$lh)),
-      18px:('d':p2b(10px,$lh)), 
+      18px:('d':p2b(10px,$lh)),
       20px:('d':p2b(9px,$lh)),
       22px:('d':p2b(8px,$lh)),
       24px:('d':p2b(8px,$lh)),
@@ -39,12 +39,78 @@ $base-base-fonts-16: (
       44px:('d':p2b(9px,$lh)),
       64px:('d':p2b(1px,$lh))
       ),
+    'vollkorn': (
+      12px:('d':p2b(5px,$lh)),
+      14px:('d':p2b(13px,$lh)),
+      16px:('d':p2b(12px,$lh)),
+      18px:('d':p2b(12px,$lh)),
+      20px:('d':p2b(11px,$lh)),
+      22px:('d':p2b(11px,$lh)),
+      24px:('d':p2b(10px,$lh)),
+      26px:('d':p2b(9px,$lh)),
+      28px:('d':p2b(9px,$lh)),
+      30px:('d':p2b(0px,$lh)),
+      32px:('d':p2b(0px,$lh)),
+      34px:('d':p2b(0px,$lh)),
+      36px:('d':p2b(15px,$lh)),
+      38px:('d':p2b(15px,$lh)),
+      40px:('d':p2b(14px,$lh)),
+      42px:('d':p2b(14px,$lh)),
+      44px:('d':p2b(13px,$lh)),
+      46px:('d':p2b(4px,$lh)),
+      48px:('d':p2b(4px,$lh)),
+      50px:('d':p2b(3px,$lh)),
+      52px:('d':p2b(3px,$lh)),
+      54px:('d':p2b(3px,$lh)),
+      56px:('d':p2b(2px,$lh)),
+      58px:('d':p2b(2px,$lh)),
+      60px:('d':p2b(1px,$lh)),
+      62px:('d':p2b(8px,$lh)),
+      64px:('d':p2b(8px,$lh)),
+      66px:('d':p2b(7px,$lh)),
+      68px:('d':p2b(7px,$lh)),
+      70px:('d':p2b(6px,$lh)),
+      72px:('d':p2b(6px,$lh)),
+      ),
+    'poppins': (
+      12px:('d':p2b(5px,$lh)),
+      14px:('d':p2b(12px,$lh)),
+      16px:('d':p2b(11px,$lh)),
+      18px:('d':p2b(11px,$lh)),
+      20px:('d':p2b(11px,$lh)),
+      22px:('d':p2b(10px,$lh)),
+      24px:('d':p2b(9px,$lh)),
+      26px:('d':p2b(9px,$lh)),
+      28px:('d':p2b(8px,$lh)),
+      30px:('d':p2b(0px,$lh)),
+      32px:('d':p2b(15px,$lh)),
+      34px:('d':p2b(14px,$lh)),
+      36px:('d':p2b(14px,$lh)),
+      38px:('d':p2b(13px,$lh)),
+      40px:('d':p2b(12px,$lh)),
+      42px:('d':p2b(12px,$lh)),
+      44px:('d':p2b(11px,$lh)),
+      46px:('d':p2b(3px,$lh)),
+      48px:('d':p2b(2px,$lh)),
+      50px:('d':p2b(1px,$lh)),
+      52px:('d':p2b(1px,$lh)),
+      54px:('d':p2b(0px,$lh)),
+      56px:('d':p2b(0px,$lh)),
+      58px:('d':p2b(15px,$lh)),
+      60px:('d':p2b(15px,$lh)),
+      62px:('d':p2b(6px,$lh)),
+      64px:('d':p2b(6px,$lh)),
+      66px:('d':p2b(5px,$lh)),
+      68px:('d':p2b(4px,$lh)),
+      70px:('d':p2b(4px,$lh)),
+      72px:('d':p2b(3px,$lh)),
+      ),
     'georgia': (
       12px:('d':p2b(4px,$lh)),
       14px:('d':p2b(11px,$lh)),
       16px:('d':p2b(11px,$lh)),
-      17px:('d':p2b(10px,$lh)), 
-      18px:('d':p2b(10px,$lh)), 
+      17px:('d':p2b(10px,$lh)),
+      18px:('d':p2b(10px,$lh)),
       20px:('d':p2b(9px,$lh)),
       21px:('d':p2b(9px,$lh)),
       22px:('d':p2b(9px,$lh)),
@@ -63,7 +129,7 @@ $base-base-fonts-16: (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(11px,$lh), 1: p2b(3px,$lh)),
     16px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
-    17px:('d':p2b(10px,$lh)), 
+    17px:('d':p2b(10px,$lh)),
     18px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
     20px:('d':p2b(10px,$lh)),
     21px:('d':p2b(9px,$lh)),
@@ -82,28 +148,43 @@ $base-base-fonts-16: (
     ),
   'oswald': (
     11px:('d':p2b(3px,$lh)),
-    12px:('d':p2b(2px,$lh)),
-    14px:('d':p2b(9px,$lh)),
-    16px:('d':p2b(8px,$lh)),
-    18px:('d':p2b(8px,$lh)), 
-    20px:('d':p2b(6px,$lh)),
-    22px:('d':p2b(5px,$lh)),
-    24px:('d':p2b(4px,$lh)),
-    26px:('d':p2b(4px,$lh)),
-    28px:('d':p2b(3px,$lh)),
-    30px:('d':p2b(10px,$lh)),
-    32px:('d':p2b(9px,$lh)),
-    34px:('d':p2b(8px,$lh)),
-    36px:('d':p2b(7px,$lh)),
-    38px:('d':p2b(6px,$lh)),
-    40px:('d':p2b(5px,$lh)),
-    42px:('d':p2b(4px,$lh))
+    12px:('d':p2b(3px,$lh)),
+    14px:('d':p2b(10px,$lh)),
+    16px:('d':p2b(9px,$lh)),
+    18px:('d':p2b(9px,$lh)),
+    20px:('d':p2b(7px,$lh)),
+    22px:('d':p2b(6px,$lh)),
+    24px:('d':p2b(5px,$lh)),
+    26px:('d':p2b(5px,$lh)),
+    28px:('d':p2b(4px,$lh)),
+    30px:('d':p2b(11px,$lh)),
+    32px:('d':p2b(10px,$lh)),
+    34px:('d':p2b(9px,$lh)),
+    36px:('d':p2b(8px,$lh)),
+    38px:('d':p2b(7px,$lh)),
+    40px:('d':p2b(6px,$lh)),
+    42px:('d':p2b(5px,$lh)),
+    44px:('d':p2b(5px,$lh)),
+    46px:('d':p2b(11px,$lh)),
+    48px:('d':p2b(11px,$lh)),
+    50px:('d':p2b(9px,$lh)),
+    52px:('d':p2b(9px,$lh)),
+    54px:('d':p2b(8px,$lh)),
+    56px:('d':p2b(7px,$lh)),
+    58px:('d':p2b(6px,$lh)),
+    60px:('d':p2b(5px,$lh)),
+    62px:('d':p2b(12px,$lh)),
+    64px:('d':p2b(12px,$lh)),
+    66px:('d':p2b(10px,$lh)),
+    68px:('d':p2b(10px,$lh)),
+    70px:('d':p2b(8px,$lh)),
+    72px:('d':p2b(8px,$lh)),
     ),
   'open-sans': (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(11px,$lh), 1:p2b(2px,$lh)),
     16px:('d':p2b(10px,$lh)),
-    18px:('d':p2b(9px,$lh)), 
+    18px:('d':p2b(9px,$lh)),
     20px:('d':p2b(9px,$lh)),
     22px:('d':p2b(7px,$lh)),
     24px:('d':p2b(7px,$lh)),
@@ -122,8 +203,8 @@ $base-base-fonts-16: (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(11px,$lh)),
     16px:('d':p2b(11px,$lh)),
-    17px:('d':p2b(10px,$lh)), 
-    18px:('d':p2b(10px,$lh)), 
+    17px:('d':p2b(10px,$lh)),
+    18px:('d':p2b(10px,$lh)),
     20px:('d':p2b(9px,$lh)),
     22px:('d':p2b(8px,$lh)),
     24px:('d':p2b(8px,$lh)),
@@ -141,7 +222,7 @@ $base-base-fonts-16: (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(11px,$lh), 1:p2b(3px, $lh)),
     16px:('d':p2b(11px,$lh)),
-    18px:('d':p2b(10px,$lh)), 
+    18px:('d':p2b(10px,$lh)),
     20px:('d':p2b(9px,$lh)),
     22px:('d':p2b(9px,$lh)),
     24px:('d':p2b(8px,$lh)),
@@ -161,7 +242,7 @@ $base-base-fonts-16: (
     15px:('d':p2b(10px,$lh), 1:p2b(1px, $lh)),
     16px:('d':p2b(10px,$lh), 1:p2b(2px, $lh)),
     17px:('d':p2b(9px,$lh)),
-    18px:('d':p2b(9px,$lh)), 
+    18px:('d':p2b(9px,$lh)),
     20px:('d':p2b(8px,$lh)),
     21px:('d':p2b(8px,$lh)),
     22px:('d':p2b(7px,$lh)),
@@ -184,7 +265,7 @@ $base-base-fonts-16: (
     13px:('d':p2b(11px,$lh)),
     14px:('d':p2b(12px,$lh), 1:p2b(4px,$lh)),
     16px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
-    18px:('d':p2b(10px,$lh)), 
+    18px:('d':p2b(10px,$lh)),
     20px:('d':p2b(10px,$lh)),
     21px:('d':p2b(10px,$lh)),
     22px:('d':p2b(9px,$lh)),
@@ -208,7 +289,7 @@ $base-base-fonts-16: (
     12px:('d':p2b(5px,$lh)),
     14px:('d':p2b(12px,$lh)),
     16px:('d':p2b(12px,$lh)),
-    18px:('d':p2b(12px,$lh)), 
+    18px:('d':p2b(12px,$lh)),
     20px:('d':p2b(11px,$lh)),
     22px:('d':p2b(11px,$lh)),
     24px:('d':p2b(10px,$lh)),
