--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -57,7 +57,7 @@ $base-base-fonts-16: (
       40px:('d':p2b(14px,$lh)),
       42px:('d':p2b(14px,$lh)),
       44px:('d':p2b(13px,$lh)),
-      46px:('d':p2b(4px,$lh)),
+      46px:('d':p2b(4px,$lh), 3:p2b(12px,$lh)),
       48px:('d':p2b(4px,$lh)),
       50px:('d':p2b(3px,$lh)),
       52px:('d':p2b(3px,$lh)),
@@ -75,8 +75,8 @@ $base-base-fonts-16: (
     'poppins': (
       12px:('d':p2b(5px,$lh)),
       14px:('d':p2b(12px,$lh)),
-      16px:('d':p2b(11px,$lh)),
-      18px:('d':p2b(11px,$lh)),
+      16px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
+      18px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
       20px:('d':p2b(11px,$lh)),
       22px:('d':p2b(10px,$lh)),
       24px:('d':p2b(9px,$lh)),
