--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -65,7 +65,7 @@ $base-base-fonts-16: (
       56px:('d':p2b(2px,$lh)),
       58px:('d':p2b(2px,$lh)),
       60px:('d':p2b(1px,$lh)),
-      62px:('d':p2b(8px,$lh)),
+      62px:('d':p2b(8px,$lh), 4:p2b(0px,$lh)),
       64px:('d':p2b(8px,$lh)),
       66px:('d':p2b(7px,$lh)),
       68px:('d':p2b(7px,$lh)),
