--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -49,7 +49,7 @@ $base-base-fonts-16: (
       24px:('d':p2b(10px,$lh)),
       26px:('d':p2b(9px,$lh)),
       28px:('d':p2b(9px,$lh)),
-      30px:('d':p2b(0px,$lh)),
+      30px:('d':p2b(0px,$lh), 2:p2b(8px,$lh)),
       32px:('d':p2b(0px,$lh)),
       34px:('d':p2b(0px,$lh)),
       36px:('d':p2b(15px,$lh)),
