--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -255,10 +255,21 @@ $base-base-fonts-16: (
     34px:('d':p2b(10px,$lh)),
     36px:('d':p2b(10px,$lh)),
     38px:('d':p2b(9px,$lh)),
-    40px:('d':p2b(8px,$lh)),
-    42px:('d':p2b(7px,$lh)),
+    40px:('d':p2b(9px,$lh)),
+    42px:('d':p2b(8px,$lh)),
+    44px:('d':p2b(7px,$lh)),
     45px:('d':p2b(14px,$lh)),
-    52px:('d':p2b(12px,$lh))
+    46px:('d':p2b(14px,$lh)),
+    48px:('d':p2b(13px,$lh)),
+    50px:('d':p2b(13px,$lh)),
+    52px:('d':p2b(12px,$lh)),
+    54px:('d':p2b(11px,$lh)),
+    56px:('d':p2b(10px,$lh)),
+    58px:('d':p2b(10px,$lh)),
+    60px:('d':p2b(8px,$lh)),
+    68px:('d':p2b(14px,$lh)),
+    70px:('d':p2b(13px,$lh)),
+    72px:('d':p2b(13px,$lh))
     ),
   'proxima-nova': (
     12px:('d':p2b(4px,$lh)),
@@ -302,5 +313,38 @@ $base-base-fonts-16: (
     38px:('d':p2b(14px,$lh)),
     40px:('d':p2b(14px,$lh)),
     42px:('d':p2b(13px,$lh))
+    ),
+  'merriweather': (
+    12px:('d':p2b(4px,$lh)),
+    14px:('d':p2b(11px,$lh)),
+    16px:('d':p2b(10px,$lh)),
+    18px:('d':p2b(10px,$lh)),
+    20px:('d':p2b(9px,$lh)),
+    22px:('d':p2b(8px,$lh)),
+    24px:('d':p2b(7px,$lh)),
+    26px:('d':p2b(7px,$lh)),
+    28px:('d':p2b(6px,$lh)),
+    30px:('d':p2b(13px,$lh)),
+    32px:('d':p2b(12px,$lh)),
+    34px:('d':p2b(12px,$lh)),
+    36px:('d':p2b(11px,$lh)),
+    38px:('d':p2b(11px,$lh)),
+    40px:('d':p2b(10px,$lh)),
+    42px:('d':p2b(9px,$lh)),
+    44px:('d':p2b(8px,$lh)),
+    46px:('d':p2b(15px,$lh)),
+    48px:('d':p2b(15px,$lh)),
+    50px:('d':p2b(14px,$lh)),
+    52px:('d':p2b(14px,$lh)),
+    54px:('d':p2b(13px,$lh)),
+    56px:('d':p2b(12px,$lh)),
+    58px:('d':p2b(12px,$lh)),
+    60px:('d':p2b(11px,$lh)),
+    62px:('d':p2b(2px,$lh)),
+    64px:('d':p2b(1px,$lh)),
+    66px:('d':p2b(0px,$lh)),
+    68px:('d':p2b(15px,$lh)),
+    70px:('d':p2b(15px,$lh)),
+    72px:('d':p2b(14px,$lh)),
     )
   );
