add 3 line version of 38px lato
Signed-off-by: Jonathan Haslett <jon@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -260,7 +260,7 @@ $base-base-fonts-16: (
     44px:('d':p2b(7px,$lh)),
     45px:('d':p2b(14px,$lh)),
     46px:('d':p2b(14px,$lh)),
-    48px:('d':p2b(13px,$lh)),
+    48px:('d':p2b(13px,$lh), 3:p2b(6px, $lh)),
     50px:('d':p2b(13px,$lh)),
     52px:('d':p2b(12px,$lh)),
     54px:('d':p2b(11px,$lh)),
