adding font sizes for raleway
Signed-off-by: Jason <jason@dashmedia.com.au>

--- a/_font-settings-14.scss
+++ b/_font-settings-14.scss
@@ -715,7 +715,15 @@ $base-base-fonts-14: (
     38px:('d':p2b(8px,$lh)),
     40px:('d':p2b(0px,$lh)),
     42px:('d':p2b(0px,$lh)),
-    48px:('d':p2b(11px,$lh))
+    44px:('d':p2b(13px,$lh)),
+    46px:('d':p2b(12px,$lh)),
+    48px:('d':p2b(11px,$lh)),
+    50px:('d':p2b(11px,$lh)),
+    52px:('d':p2b(10px,$lh)),
+    54px:('d':p2b(2px,$lh)),
+    56px:('d':p2b(1px,$lh)),
+    58px:('d':p2b(1px,$lh)),
+    60px:('d':p2b(0px,$lh))
     ),
   'chaparral-pro':(
     12px:('d':p2b(11px,$lh)),
