--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -234,7 +234,21 @@ $base-base-fonts-16: (
     36px:('d':p2b(12px,$lh)),
     38px:('d':p2b(11px,$lh)),
     40px:('d':p2b(11px,$lh)),
-    42px:('d':p2b(10px,$lh))
+    42px:('d':p2b(10px,$lh)),
+    44px:('d':p2b(9px,$lh)),
+    46px:('d':p2b(0px,$lh)),
+    48px:('d':p2b(0px,$lh)),
+    50px:('d':p2b(15px,$lh)),
+    52px:('d':p2b(15px,$lh)),
+    54px:('d':p2b(14px,$lh)),
+    56px:('d':p2b(13px,$lh)),
+    58px:('d':p2b(12px,$lh)),
+    60px:('d':p2b(12px,$lh)),
+    62px:('d':p2b(3px,$lh)),
+    64px:('d':p2b(3px,$lh)),
+    66px:('d':p2b(2px,$lh)),
+    68px:('d':p2b(1px,$lh)),
+    70px:('d':p2b(0px,$lh))
     ),
   'lato': (
     12px:('d':p2b(4px,$lh)),
