--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -226,6 +226,7 @@ $base-base-fonts-16: (
     20px:('d':p2b(9px,$lh)),
     22px:('d':p2b(9px,$lh)),
     24px:('d':p2b(8px,$lh)),
+    25px:('d':p2b(8px,$lh)),
     26px:('d':p2b(7px,$lh)),
     28px:('d':p2b(7px,$lh)),
     30px:('d':p2b(14px,$lh)),
@@ -248,7 +249,8 @@ $base-base-fonts-16: (
     64px:('d':p2b(3px,$lh)),
     66px:('d':p2b(2px,$lh)),
     68px:('d':p2b(1px,$lh)),
-    70px:('d':p2b(0px,$lh))
+    70px:('d':p2b(0px,$lh)),
+    111px:('d':p2b(10px,$lh))
     ),
   'lato': (
     12px:('d':p2b(4px,$lh)),
