--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -222,6 +222,7 @@ $base-base-fonts-16: (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(11px,$lh), 1:p2b(3px, $lh)),
     16px:('d':p2b(11px,$lh)),
+    17px:('d':p2b(10px,$lh)),
     18px:('d':p2b(10px,$lh)),
     20px:('d':p2b(9px,$lh)),
     22px:('d':p2b(9px,$lh)),
@@ -246,7 +247,7 @@ $base-base-fonts-16: (
     58px:('d':p2b(12px,$lh)),
     60px:('d':p2b(12px,$lh)),
     62px:('d':p2b(3px,$lh)),
-    64px:('d':p2b(3px,$lh)),
+    64px:('d':p2b(3px,$lh), 4:p2b(11px,$lh)),
     66px:('d':p2b(2px,$lh)),
     68px:('d':p2b(1px,$lh)),
     70px:('d':p2b(0px,$lh)),
