--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -131,7 +131,7 @@ $base-base-fonts-16: (
     16px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
     17px:('d':p2b(10px,$lh)),
     18px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
-    20px:('d':p2b(10px,$lh)),
+    20px:('d':p2b(10px,$lh), 1: p2b(1px,$lh)),
     21px:('d':p2b(9px,$lh)),
     22px:('d':p2b(9px,$lh)),
     24px:('d':p2b(8px,$lh)),
