--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -363,5 +363,23 @@ $base-base-fonts-16: (
     68px:('d':p2b(15px,$lh)),
     70px:('d':p2b(15px,$lh)),
     72px:('d':p2b(14px,$lh)),
+    ),
+  'montserrat': (
+    12px:('d':p2b(3px,$lh)),
+    14px:('d':p2b(11px,$lh)),
+    16px:('d':p2b(10px,$lh)),
+    18px:('d':p2b(9px,$lh)),
+    20px:('d':p2b(9px,$lh)),
+    22px:('d':p2b(8px,$lh)),
+    24px:('d':p2b(7px,$lh)),
+    26px:('d':p2b(7px,$lh)),
+    28px:('d':p2b(6px,$lh)),
+    30px:('d':p2b(13px,$lh)),
+    32px:('d':p2b(12px,$lh)),
+    34px:('d':p2b(12px,$lh)),
+    36px:('d':p2b(11px,$lh)),
+    38px:('d':p2b(11px,$lh)),
+    40px:('d':p2b(10px,$lh)),
+    42px:('d':p2b(9px,$lh))
     )
   );
