--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -286,7 +286,10 @@ $base-base-fonts-16: (
     60px:('d':p2b(8px,$lh)),
     68px:('d':p2b(14px,$lh)),
     70px:('d':p2b(13px,$lh)),
-    72px:('d':p2b(13px,$lh))
+    72px:('d':p2b(13px,$lh)),
+    74px:('d':p2b(12px,$lh)),
+    76px:('d':p2b(11px,$lh)),
+    78px:('d':p2b(2px,$lh))
     ),
   'proxima-nova': (
     12px:('d':p2b(4px,$lh)),
