--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -262,7 +262,7 @@ $base-base-fonts-16: (
     18px:('d':p2b(9px,$lh)),
     20px:('d':p2b(8px,$lh)),
     21px:('d':p2b(8px,$lh)),
-    22px:('d':p2b(7px,$lh)),
+    22px:('d':p2b(7px,$lh), 1:p2b(16px, $lh)),
     24px:('d':p2b(6px,$lh)),
     25px:('d':p2b(6px,$lh)),
     26px:('d':p2b(6px,$lh)),
@@ -270,7 +270,7 @@ $base-base-fonts-16: (
     30px:('d':p2b(12px,$lh)),
     32px:('d':p2b(11px,$lh)),
     34px:('d':p2b(10px,$lh)),
-    36px:('d':p2b(10px,$lh)),
+    36px:('d':p2b(10px,$lh), 2:p2b(2px, $lh)),
     38px:('d':p2b(9px,$lh)),
     40px:('d':p2b(9px,$lh)),
     42px:('d':p2b(8px,$lh)),
@@ -283,7 +283,7 @@ $base-base-fonts-16: (
     54px:('d':p2b(11px,$lh)),
     56px:('d':p2b(10px,$lh)),
     58px:('d':p2b(10px,$lh)),
-    60px:('d':p2b(8px,$lh)),
+    60px:('d':p2b(8px,$lh), 3:p2b(1px, $lh)),
     68px:('d':p2b(14px,$lh)),
     70px:('d':p2b(13px,$lh)),
     72px:('d':p2b(13px,$lh)),
