--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -406,5 +406,56 @@ $base-base-fonts-16: (
       46px:('d':p2b(1px,$lh)),
       48px:('d':p2b(0px,$lh), 3:p2b(8px,$lh)),
       50px:('d':p2b(0px,$lh))
+    ),
+    'program': (
+      12px:('d':p2b(5px,$lh)),
+      14px:('d':p2b(12px,$lh)),
+      16px:('d':p2b(12px,$lh)),
+      18px:('d':p2b(11px,$lh)),
+      20px:('d':p2b(11px,$lh)),
+      22px:('d':p2b(10px,$lh)),
+      24px:('d':p2b(9px,$lh)),
+      26px:('d':p2b(9px,$lh)),
+      28px:('d':p2b(8px,$lh)),
+      30px:('d':p2b(0px,$lh)),
+      32px:('d':p2b(15px,$lh)),
+      34px:('d':p2b(15px,$lh)),
+      36px:('d':p2b(14px,$lh)),
+      38px:('d':p2b(14px,$lh)),
+      40px:('d':p2b(13px,$lh)),
+      42px:('d':p2b(13px,$lh)),
+      44px:('d':p2b(12px,$lh)),
+      46px:('d':p2b(3px,$lh)),
+      48px:('d':p2b(3px,$lh)),
+      50px:('d':p2b(2px,$lh)),
+      52px:('d':p2b(2px,$lh)),
+      54px:('d':p2b(1px,$lh)),
+      56px:('d':p2b(1px,$lh)),
+      58px:('d':p2b(0px,$lh)),
+      60px:('d':p2b(0px,$lh)),
+      62px:('d':p2b(7px,$lh)),
+      64px:('d':p2b(7px,$lh))
+    ),
+    'caveat': (
+      12px:('d':p2b(4px,$lh)),
+      14px:('d':p2b(12px,$lh)),
+      16px:('d':p2b(11px,$lh)),
+      18px:('d':p2b(10px,$lh)),
+      20px:('d':p2b(10px,$lh)),
+      22px:('d':p2b(9px,$lh)),
+      24px:('d':p2b(8px,$lh)),
+      26px:('d':p2b(8px,$lh)),
+      28px:('d':p2b(7px,$lh)),
+      30px:('d':p2b(14px,$lh)),
+      32px:('d':p2b(14px,$lh)),
+      34px:('d':p2b(13px,$lh)),
+      36px:('d':p2b(12px,$lh)),
+      38px:('d':p2b(12px,$lh)),
+      40px:('d':p2b(11px,$lh)),
+      42px:('d':p2b(11px,$lh)),
+      44px:('d':p2b(10px,$lh)),
+      46px:('d':p2b(1px,$lh)),
+      48px:('d':p2b(0px,$lh)),
+      50px:('d':p2b(0px,$lh))
     )
   );
