--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -434,7 +434,7 @@ $base-base-fonts-16: (
       58px:('d':p2b(0px,$lh)),
       60px:('d':p2b(0px,$lh)),
       62px:('d':p2b(7px,$lh)),
-      64px:('d':p2b(7px,$lh))
+      64px:('d':p2b(7px,$lh), 4:p2b(15px,$lh))
     ),
     'caveat': (
       12px:('d':p2b(4px,$lh)),
