--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -128,6 +128,7 @@ $base-base-fonts-16: (
   'source-sans-pro': (
     12px:('d':p2b(4px,$lh)),
     14px:('d':p2b(11px,$lh), 1: p2b(3px,$lh)),
+    15px:('d':p2b(11px,$lh)),
     16px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
     17px:('d':p2b(10px,$lh)),
     18px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
