--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -426,7 +426,7 @@ $base-base-fonts-16: (
       40px:('d':p2b(13px,$lh)),
       42px:('d':p2b(13px,$lh)),
       44px:('d':p2b(12px,$lh)),
-      46px:('d':p2b(3px,$lh)),
+      46px:('d':p2b(3px,$lh), 3:p2b(11px,$lh)),
       48px:('d':p2b(3px,$lh)),
       50px:('d':p2b(2px,$lh)),
       52px:('d':p2b(2px,$lh)),
